log/build_2024-04-04_17-24-40/leg_dector/stderr.log
  File "/home/airlab/Desktop/project_ws/install/leg_dector/lib/python3.8/site-packages/leg_dector/leg_detection.py", line 53
    marker_msg.color.b = 0.0aa
                            ^
SyntaxError: invalid syntax

